# ai-chat-wingman

./: .gitattributes  .gitignore  AGENTS.md  README.md  dev.ps1  start_app.bat
.github/: copilot-instructions.md
backend/: alembic.ini  pyproject.toml  run_desktop.py
backend/app/: __init__.py  config.py  main.py  paths.py  settings_store.py
backend/app/api/: demo.py  history.py  importers.py  jobs.py  memories.py  multimodal.py  onboarding.py  privacy.py  reply.py  settings.py  sse.py  style_test.py  targets.py
backend/app/db/: database.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_phase0_foundation.py  0002_onboarding.py  0003_reply_generation.py  0004_style_test.py  0005_chat_targets.py  0006_memories.py  0007_phase8_saved_replies.py
backend/app/desktop/: __init__.py  launcher.py  window.py
backend/app/importers/: __init__.py  base_importer.py  qq_json_importer.py
backend/app/jobs/: __init__.py  runner.py
backend/app/llm/: __init__.py  base.py  call_logger.py  mock_provider.py  openai_compatible_provider.py  router.py
backend/app/prompts/: __init__.py  _registry.py
backend/app/security/: secret_box.py
backend/app/services/: chat_import_service.py  history_service.py  memory_service.py  multimodal_service.py  onboarding_service.py  privacy_service.py  profile_merge_service.py  reply_service.py  style_test_service.py  target_service.py
backend/tests/: conftest.py  test_smoke.py
docs/: ai_chat_wingman_spec_plan.md  business_optimization_completion_log.md  business_optimization_phase_plan.md  (+11 more)
(+23 files in other folders)
