[project]
name = "ai-chat-wingman-backend"
version = "0.1.5"
description = "FastAPI backend for AI Chat Wingman"
requires-python = ">=3.11,<3.15"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.4"]
build = ["pyinstaller>=6.11.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
